--- a/_includes/gallery-layout.html
+++ b/_includes/gallery-layout.html
@@ -1,21 +1,63 @@
- <!-- Single Gallery -->
-  <div class="col-lg-12">
-    <div id="imageGallery{% if include.id_number %}-{{ include.id_number }}{% endif %}">
-      <div id="gallery-sizer{% if include.id_number %}-{{ include.id_number }}{% endif %}"></div>
-      {% for picture in include.gallery.pictures %}
-        <a href="{{ site.url }}{{ site.baseurl }}/assets/img/gallery/{{ include.gallery.picture_path }}/{{ picture.original }}"
-        data-responsive="{% for size in picture.sizes %} {{ site.url}}{{ site.baseurl }}/assets/gallery/{{ include.gallery.picture_path }}/{{ size }}{% endfor %}" class="image"
-        {% if picture.title %} data-sub-html="<div class='lg-toolbar caption'><h4>{{ picture.title | escape }}</h4>{% if picture.caption %}<p>{{ picture.caption | escape }}</p>{% endif %}</div>"{% endif %}>
-          <img alt="{{ picture.title }}" class="img-thumbnail" src="{{ site.url }}{{ site.baseurl }}/assets/img/gallery/{{ include.gallery.picture_path }}/{{ picture.thumbnail }}" />
+<!-- Single Gallery -->
+<div class="col-lg-12">
+  <div class="row" id="imageGallery{% if include.id_number %}-{{ include.id_number }}{% endif %}">
+    <div id="gallery-sizer{% if include.id_number %}-{{ include.id_number }}{% endif %}"></div>
+
+    {% for picture in include.gallery.pictures %}
+  <div class="col-sm-6 col-md-4 mb-4">
+    <div class="media-tile">
+      {% if picture.type == "video" %}
+        <div class="media-wrapper">
+          <video
+            class="media-element"
+            controls
+            muted
+            playsinline
+            preload="metadata"
+            poster="{{ site.url }}{{ site.baseurl }}/assets/img/gallery/{{ include.gallery.picture_path }}/{{ picture.thumbnail }}"
+          >
+            <source
+              src="{{ site.url }}{{ site.baseurl }}/assets/img/gallery/{{ include.gallery.picture_path }}/{{ picture.video_src }}"
+              type="video/mp4"
+            />
+            Your browser does not support the video tag.
+          </video>
+        </div>
+      {% else %}
+        <a
+          href="{{ site.url }}{{ site.baseurl }}/assets/img/gallery/{{ include.gallery.picture_path }}/{{ picture.original }}"
+          data-responsive="{% for size in picture.sizes %} {{ site.url }}{{ site.baseurl }}/assets/gallery/{{ include.gallery.picture_path }}/{{ size }}{% endfor %}"
+          class="image"
+          {% if picture.title %}
+            data-sub-html="<div class='lg-toolbar caption'><h4>{{ picture.title | escape }}</h4>{% if picture.caption %}<p>{{ picture.caption | escape }}</p>{% endif %}</div>"
+          {% endif %}
+        >
+          <div class="media-wrapper">
+            <img
+              loading="lazy"
+              alt="{{ picture.title }}"
+              class="media-element"
+              src="{{ site.url }}{{ site.baseurl }}/assets/img/gallery/{{ include.gallery.picture_path }}/{{ picture.thumbnail }}"
+            />
+          </div>
         </a>
-      {% endfor %}
+      {% endif %}
+
+      <div class="caption mt-2 text-center px-2">
+        <h6 class="mb-1">{{ picture.title }}</h6>
+        {% if picture.caption %}<p class="mb-0">{{ picture.caption }}</p>{% endif %}
       </div>
+    </div>
   </div>
+{% endfor %}
+  </div>
+</div>
+
 <script type="text/javascript">
-    $(document).ready(function() {
-        $("#imageGallery").lightGallery({
-          thumbnail: false,
-          selector: '.image'
-        });
+  $(document).ready(function() {
+    $("#imageGallery").lightGallery({
+      thumbnail: false,
+      selector: '.image'
     });
+  });
 </script>
