--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -1,6 +1,28 @@
 ---
 layout: default
 ---
+
+<style>
+.media-wrapper {
+  position: relative;
+  width: 100%;
+  padding-top: 56.25%;
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 0 2px 12px rgba(0,0,0,0.05);
+  margin-bottom: 1rem;
+}
+.media-element {
+  position: absolute; top: 0; left: 0;
+  width: 100%; height: 100%;
+  object-fit: cover;
+}
+.media-wrapper:hover .media-element {
+  transform: scale(1.03);
+  transition: transform 0.3s ease;
+}
+</style>
+
 </div>
 <div class="container">
         <div class="row d-flex justify-content-center">
