Website refactor for clarity

--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,2 +1,13 @@
-<p> HTML , C++</p>
-<p> PS5 Api, OpenGL</p>
+<p><strong>Coding Languages:</strong></p>
+<ul>
+  <li>C++</li>
+  <li>Rust</li>
+  <li>HTML</li>
+</ul>
+
+<p><strong>Rendering API's:</strong></p>
+<ul>
+  <li>PS5</li>
+  <li>Vulkan</li>
+  <li>OpenGL</li>
+</ul>
