--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -6,7 +6,7 @@
     text-align: center;
     background-attachment: fixed;
     background-size: cover;
-    background-position: center;
+    background-position: calc(50% + 30px) center;
 }
 .jumbotron-btns {
   display: block;
@@ -26,8 +26,8 @@
   <p class="lead" id="typewriteText"></p>
   <!-- uncomment/modify buttons as you want-->
   <div class="jumbotron-btns">
-    <a href="{{site.url}}{{site.baseurl}}/gallery">
-      <button class="btn btn-md btn-warning"> <strong>Get Started</strong> </button>
+    <a href="{{site.url}}{{site.baseurl}}/projects">
+      <button class="btn btn-md btn-warning"> <strong>Projects</strong> </button>
     </a>
   </div>
 </div>
