--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,69 +1,100 @@
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark" id="topNav">
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarNav"
+    aria-controls="navbarNav"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="icono-hamburger" id="navbar-hamburger"> </span>
+  </button>
+  <a class="navbar-brand" href="/">{{ site.title }}</a>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      {% for i in site.urls %}
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          href="{{ site.url }}{{ site.baseurl }}{{ i.url }}"
+          >{{ i.text }}</a
+        >
+      </li>
+      {% endfor %}
+    </ul>
+  </div>
 
-        <nav class="navbar navbar-expand-lg fixed-top navbar-dark" id="topNav">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="icono-hamburger" id="navbar-hamburger"> </span>
-          </button>
-          <a class="navbar-brand" href="/">{{site.title}}</a>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              {% for i in site.urls %}
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  href="{{ site.url}}{{site.baseurl}}{{ i.url }}"
-                  >{{ i.text }}</a
-                >
-              </li>
-              {% endfor %}
+  <!-- Right side nav: Search, Social, Theme Toggle -->
+  <ul class="nav justify-content-end">
+    
+    <!-- GitHub -->
+    {% if site.github_username %}
+    <li class="nav-item">
+      <a class="nav-link social-link" href="https://github.com/{{ site.github_username }}" target="_blank">
+        <i class="fab fa-github"></i>
+      </a>
+    </li>
+    {% endif %}
+    
+    <!-- LinkedIn -->
+    {% if site.linkedin_username %}
+    <li class="nav-item">
+      <a class="nav-link social-link" href="https://linkedin.com/in/{{ site.linkedin_username }}" target="_blank">
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+    </li>
+    {% endif %}
+    
+    <!-- Instagram -->
+    {% if site.instagram_username %}
+    <li class="nav-item">
+      <a class="nav-link social-link" href="https://instagram.com/{{ site.instagram_username }}" target="_blank">
+        <i class="fab fa-instagram"></i>
+      </a>
+    </li>
+    {% endif %}
+    
+    <!-- Search Icon -->
+    <li class="nav-item">
+      <a class="nav-link toggle-search-button" href="#search">
+        <i class="fa fa-search search-icon" aria-hidden="true"></i>
+      </a>
+    </li>
+    
+    <!-- Theme Toggle -->
+    <li class="nav-item"> 
+      <input
+      class="nav-link switch theme-toggle"
+      type="checkbox"
+        name="checkbox"
+      />
+    </li>
+  </ul>
+</nav>
 
-            </ul>
-          </div>
-          <ul class="nav justify-content-end">
-            <li class="nav-item">
-              <a class="nav-link toggle-search-button" href="#search">
-                <i class="fa fa-search search-icon" aria-hidden="true"></i>
-              </a>
-            </li>
+<div id="progress-bar"></div>
 
-            <li class="nav-item"> 
-              <input
-                class="nav-link switch theme-toggle"
-                type="checkbox"
-                name="checkbox"
-              />
-            </li>
-          </ul>
-        </nav>
-        <div id="progress-bar"></div>
-        <!-- Search Form -->
-        <div class="search-form-container">
-
-          <form class="search-form">
-            <fieldset class="search-form__fieldset">
-              <div class="row">
-                <div class="col-lg-8 offset-md-2">
-                  <input class="search-form__field" placeholder="Type to Search..." autofocus>
-                  <input class="search-form__submit" type="submit" value="search">
-                </div>
-              </div>
-            </fieldset>
-          </form>
-
-          <div class="row">
-            <div class="col-lg-8 offset-md-2 search-results">
-              <div class="card search-results"></div>
-            </div>
-          </div>
-
-          <div class="close-search-button search-form-container__close">
-              <i class="fa fa-times icon"></i>
-          </div>
+<!-- Search Form -->
+<div class="search-form-container">
+  <form class="search-form">
+    <fieldset class="search-form__fieldset">
+      <div class="row">
+        <div class="col-lg-8 offset-md-2">
+          <input class="search-form__field" placeholder="Type to Search..." autofocus>
+          <input class="search-form__submit" type="submit" value="search">
         </div>
+      </div>
+    </fieldset>
+  </form>
+
+  <div class="row">
+    <div class="col-lg-8 offset-md-2 search-results">
+      <div class="card search-results"></div>
+    </div>
+  </div>
+
+  <div class="close-search-button search-form-container__close">
+    <i class="fa fa-times icon"></i>
+  </div>
+</div>
