Polish w Desi Feedback

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,10 +28,10 @@ layout: full-width
         <!-- Text Column -->
         <div class="col-md-8">
           <p>
-            👋 Hi, my name is Timethy Hyman.
+            Hi, my name is Timethy Hyman.
             I'm a 3rd year <strong>graphics programmer</strong> at <strong>Breda University of Applied
               Sciences</strong>, with a passion for math and learning new things. I have experience in <strong>custom
-              engine development</strong> and <strong>extending existing engines</strong> such as Godot.
+              engine development</strong> and <strong>extending the render backend of existing engines</strong> such as Godot.
           </p>
 
           <p>
@@ -40,12 +40,12 @@ layout: full-width
           </p>
 
           <p>
-            🎮 In my free time you can find me coaching the Breda University volleyball team, learning a new piano piece
+            🏐 In my free time you can find me coaching the Breda University volleyball team, learning a new piano piece
             or working on cool side projects.
           </p>
 
           <p class="skills-section">
-            🛠️ <strong>Experience:</strong>
+            <strong>Experience:</strong>
           </p>
 
           <div class="skills-grid">
