--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -25,4 +25,9 @@
 
   <p class="lead" id="typewriteText"></p>
   <!-- uncomment/modify buttons as you want-->
+  <div class="jumbotron-btns">
+    <a href="{{site.url}}{{site.baseurl}}/projects">
+      <button class="btn btn-md btn-warning"> <strong>Projects</strong> </button>
+    </a>
+  </div>
 </div>
