--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -166,7 +166,8 @@ permalink: /projects/
       </div>
 
       <div class="projects-grid">
-        {% for project in site.projects reversed %}
+       {% assign sorted_projects = site.projects | sort: "path" %}
+        {% for project in sorted_projects %}
         <article class="project-card" data-tags="{{ project.tags | join: ' ' | downcase }}">
           {% if project.thumbnail %}
           <a href="{{ project.url | prepend: site.baseurl }}">
