--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -2,55 +2,68 @@
 layout: default
 ---
 
-<div class="col-lg-12">
-  <div class="row justify-content-center">
-    <div class="col-lg-8">
+<div class="project-container">
+  <a href="{{ '/projects/' | relative_url }}" class="project-back-button">
+    ← Back to Projects
+  </a>
 
-      {%- comment -%}
-      Dynamic “Back” button to the Year X listing
-      {%- endcomment -%}
+  <div class="project-header">
+    <h1>{{ page.title }}</h1>
+    {% if page.subtitle %}
+    <h4 class="project-subtitle">{{ page.subtitle }}</h4>
+    {% endif %}
+    
+    <div class="project-meta">
       {% assign year_slug = page.category %}
       {% assign year_label = year_slug | replace: "year", "Year " %}
-
-      <a href="{{ '/projects/' | relative_url }}" class="btn btn-outline-secondary mb-4">
-        ← Back to Projects
+      Category:
+      <a href="{{ '/projects/' | append: year_slug | append: '/' | relative_url }}" class="meta-link">
+        {{ year_label }}
       </a>
-
-      <article class="card" itemscope itemtype="http://schema.org/BlogPosting">
-        <div class="card-header">
-          <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-          {% if page.subtitle %}
-          <h4 class="post-meta">{{ page.subtitle }}</h4>
-          {% endif %}
-          <div class="post-summary">
-            Category:
-            <a href="{{ '/projects/' | append: year_slug | append: '/' | relative_url }}">
-              {{ year_label }}
-            </a>
-            {% if page.date %}
-            | Completed:
-            <time datetime="{{ page.date }}" itemprop="datePublished">
-              {{ page.date | date: "%b %-d, %Y" }}
-            </time>
-            {% endif %}
-          </div>
-        </div>
-        <div class="card-body" itemprop="articleBody">
-          {% if page.thumbnail %}
-          <img class="card-img-top" src="{{ site.url }}{{ site.baseurl }}{{ page.thumbnail }}" alt="{{ page.title }}">
-          <br><br>
-          {% endif %}
-          {{ content }}
-          <br>
-          {%- include share_page.html -%}
-        </div>
-      </article>
-
-      <div class="comments">
-        {%- include blog_post_comments.html -%}
-      </div>
-
+      {% if page.date %}
+      | Completed: {{ page.date | date: "%B %Y" }}
+      {% endif %}
     </div>
-    {%- include blog_sidebar.html -%}
+
+    {% if page.tags %}
+    <div class="project-tags">
+      {% for tag in page.tags %}
+      <span class="project-tag">{{ tag }}</span>
+      {% endfor %}
+    </div>
+    {% endif %}
+  </div>
+
+  <article itemscope itemtype="http://schema.org/BlogPosting">
+    <div itemprop="articleBody">
+      {{ content }}
+    </div>
+  </article>
+
+  <div class="project-share">
+    {%- include share_page.html -%}
+  </div>
+
+  <div class="project-comments">
+    {%- include blog_post_comments.html -%}
+  </div>
+
+  <!-- Project footer signature -->
+  <div class="project-footer">
+    <div class="project-footer-divider"></div>
+    <div class="project-footer-content">
+      <a href="{{ '/' | relative_url }}" class="project-footer-signature">
+        <div class="signature-name">Timethy Hyman</div>
+        <div class="signature-title">Graphics Programmer</div>
+      </a>
+      <div class="project-footer-social">
+        <a href="{{ site.github_username | prepend: 'https://github.com/' }}" target="_blank" rel="noopener" aria-label="GitHub">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="{{ site.linkedin_username | prepend: 'https://linkedin.com/in/' }}" target="_blank" rel="noopener" aria-label="LinkedIn">
+          <i class="fab fa-linkedin"></i>
+        </a>
+      </div>
+    </div>
   </div>
 </div>
