--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -117,7 +117,8 @@ layout: default
     <div id="author_projects" class="card">
       <h1 class="card-title">Projects</h1>
       <br />
-      {% for project in site.author_project_details %} {% if project.visibility
+     {% assign sorted_projects = site.projects | sort: "order" %}
+      {% for project in sorted_projects %} {% if project.visibility
       == true %}
       <div class="row" id="project-card">
         <div class="col-md-6">
