--- a/_includes/header.html
+++ b/_includes/header.html
@@ -56,20 +56,20 @@
     {% endif %}
     
     <!-- Search Icon -->
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link toggle-search-button" href="#search">
         <i class="fa fa-search search-icon" aria-hidden="true"></i>
       </a>
-    </li>
+    </li> -->
     
     <!-- Theme Toggle -->
-    <li class="nav-item"> 
-      <input
-      class="nav-link switch theme-toggle"
-      type="checkbox"
-        name="checkbox"
-      />
-    </li>
+    <!-- <li class="nav-item">  -->
+      <!-- <input -->
+      <!-- class="nav-link switch theme-toggle" -->
+      <!-- type="checkbox" -->
+        <!-- name="checkbox" -->
+      <!-- /> -->
+    <!-- </li> -->
   </ul>
 </nav>
 
