--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -201,7 +201,7 @@
 
 .media-caption {
   text-align: center;
-  color: #666;
+  color: white;
   font-size: 14px;
   font-style: italic;
   margin-top: -10px;
